[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-scraper-cli"
version = "0.1.0"
description = "A powerful YouTube scraper with proxy rotation and anti-bot detection"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["youtube", "scraper", "cli", "proxy"]
dependencies = [
    "yt-dlp>=2023.11.16",
    "aiohttp>=3.9.1",
    "beautifulsoup4>=4.12.2",
    "click>=8.1.7",
    "fake-useragent>=1.4.0",
    "brotli>=1.1.0",
    "tabulate>=0.9.0",
]
requires-python = ">=3.8"

[project.scripts]
youtube-scraper = "youtube_scraper.cli:main"

[tool.setuptools]
packages = ["youtube_scraper"]

[tool.setuptools.package-data]
youtube_scraper = ["data/*"] 